# esp-emac-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/: dependabot.yml  release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
examples/: embassy_net_lan8720a.rs
src/: clock.rs  config.rs  emac.rs  embassy.rs  embassy_net.rs  error.rs  instrumentation.rs  interrupt.rs  lib.rs  mdio.rs  reset.rs
src/dma/: engine.rs  mod.rs  ring.rs
src/dma/descriptor/: mod.rs
src/regs/: dma.rs  ext.rs  gpio.rs  mac.rs  mod.rs
