[package]
name          = "esp-emac"
version       = "0.1.1"
edition       = "2021"
rust-version  = "1.75"
authors       = ["Viacheslav Bocharov <v@baodeep.com>", "JetHome (r)"]
license       = "GPL-2.0-or-later OR Apache-2.0"
description   = "ESP32 EMAC bare-metal Ethernet MAC driver with DMA, RMII, and MDIO"
repository    = "https://github.com/jethub-iot/esp-emac-rs"
documentation = "https://docs.rs/esp-emac"
readme        = "README.md"
keywords      = ["embedded", "no-std", "esp32", "ethernet", "emac"]
categories    = ["embedded", "no-std", "hardware-support"]

[package.metadata.docs.rs]
# docs.rs builds need the Xtensa target so esp-hal compiles. The
# nightly flag is required because esp-hal pulls in nightly-only
# `core` features.
default-target = "xtensa-esp32-none-elf"
targets        = []
features       = ["esp-hal", "mdio-phy", "embassy-net", "async", "defmt"]
rustdoc-args   = ["--cfg", "docsrs"]

[dependencies]
embedded-hal       = "1.0"
embedded-hal-async = { version = "1.0", optional = true }
esp-hal            = { version = "1.0.0", features = ["esp32", "unstable"], optional = true }
# `eth-mdio-phy` is not yet on crates.io. The `path` dep resolves
# locally when this crate is consumed as a sibling of `eth-phy-rs`
# (the JetHome firmware super-repo and the recommended submodule
# layout — see README "Pre-publication" note). The `version = "0.1.0"`
# tag is what cargo emits to the registry once the crate publishes;
# at that point the `path` field is stripped automatically.
eth-mdio-phy       = { version = "0.1.0", path = "../eth-phy/crates/eth-mdio-phy", optional = true }
embassy-net-driver = { version = "0.2", optional = true }
embassy-sync       = { version = "0.7", optional = true }
critical-section   = { version = "1.2", optional = true }
defmt              = { version = "0.3", optional = true }

# Host-target dev deps: `critical-section` with the `std` feature is
# needed by unit tests of the `regs/*` modules. Gated to non-baremetal
# targets so the `std` feature does NOT leak into the bare-metal
# example build through cargo's feature unification.
[target.'cfg(not(target_os = "none"))'.dev-dependencies]
critical-section = { version = "1.2", features = ["std"] }

# Bare-metal deps used only by `examples/embassy_net_lan8720a.rs`.
# Gated to `target_os = "none"` so they are never resolved on the host
# (where `cargo test` runs against $HOST_TARGET).
#
# `eth-phy-lan87xx` is referenced through a sibling path; building
# `cargo build --example embassy_net_lan8720a` from a standalone clone
# of this repository requires `eth-phy-rs` checked out alongside (see
# the example's docstring). Once published to crates.io this becomes
# a plain `version = "..."` dep.
[target.'cfg(target_os = "none")'.dev-dependencies]
embassy-executor = "0.9"
embassy-net      = { version = "0.7", features = ["dhcpv4", "medium-ethernet"] }
embassy-time     = "0.5"
esp-backtrace    = { version = "0.18.1", features = ["esp32", "panic-handler", "println"] }
esp-println      = { version = "0.16.1", default-features = false, features = ["esp32", "uart"] }
esp-rtos         = { version = "0.2.0", features = ["esp32", "embassy"] }
esp-sync         = { version = "0.1.1", features = ["esp32"] }
eth-phy-lan87xx  = { version = "0.1", path = "../eth-phy/crates/eth-phy-lan87xx" }
static_cell      = "2"

[[example]]
name              = "embassy_net_lan8720a"
required-features = ["esp-hal", "mdio-phy", "embassy-net"]

[features]
default     = []
mdio-phy    = ["dep:eth-mdio-phy"]
# Activate hardware integrations (esp-hal interrupt binding etc.)
# Required for the firmware build; tests run without it.
esp-hal     = ["dep:esp-hal"]
embassy-net = ["dep:embassy-net-driver", "dep:embassy-sync", "dep:critical-section"]
# Expose async-flavoured helpers (currently `reset::async_impl::AsyncResetController`)
# that take an `embedded_hal_async::delay::DelayNs` instead of the
# blocking `embedded_hal::delay::DelayNs`. Independent of `embassy-net`.
async       = ["dep:embedded-hal-async"]
defmt       = ["dep:defmt"]
